--- a/src/pages/components/popover/usage.mdx
+++ b/src/pages/components/popover/usage.mdx
@@ -410,7 +410,7 @@ guidace , see Carbon's
 
 Tooltips use popovers as a base layer. Tooltips are comprised of a trigger
 button, popover container and text. For further guidance, see Carbon's
-[tooltip](https://www.carbondesignsystem.com/components/tooltip/usage/).
+[tooltip component](https://www.carbondesignsystem.com/components/tooltip/usage/).
 
 ## References
 
