chore(docs): add inline notification for note

--- a/src/pages/components/tabs/usage.mdx
+++ b/src/pages/components/tabs/usage.mdx
@@ -278,8 +278,10 @@ to drive visual rhythm by spacing content in multiples of two columns and
 aligning the beginning and ending of the tab elements with content below the
 tabs when possible.
 
-_Note: This is not currently implemented in the components, updates for
-alignment to the grid are incoming!_
+<InlineNotification>
+  _Note: This is not currently implemented in the components, updates for
+  alignment to the grid are incoming!_
+</InlineNotification>
 
 <Row>
 <Column colLg={12}>
