--- a/src/pages/patterns/disclosures-pattern/index.mdx
+++ b/src/pages/patterns/disclosures-pattern/index.mdx
@@ -70,7 +70,7 @@ width of six columns or less.
 
 Disclosures should always be triggered to open or close by the user. Disclosures
 should never open automatically because this could be potentially intrusive to
-the users workflow.
+the user's workflow.
 
 #### One disclosure should open at a time
 
