--- a/src/pages/components/popover/usage.mdx
+++ b/src/pages/components/popover/usage.mdx
@@ -403,7 +403,7 @@ guidance, see Carbon's
 
 Toggletips use the popovers as a base layer. Toggletips allow interactive
 elements within the popover container while still being accessible. For further
-guidace , see Carbon's
+guidance, see Carbon's
 [toggletip component](https://carbondesignsystem.com/components/toggletip/usage/)
 
 #### Tooltips
