docs: update popover component content (#2826)
* update: popover content

* update: content

* update: image border

* align wording

* Update src/pages/components/popover/usage.mdx

Co-authored-by: Anna Gonzales <agonz@us.ibm.com>

Co-authored-by: Anna Gonzales <agonz@us.ibm.com>
Co-authored-by: kodiakhq[bot] <49736102+kodiakhq[bot]@users.noreply.github.com>

--- a/src/pages/components/popover/usage.mdx
+++ b/src/pages/components/popover/usage.mdx
@@ -39,7 +39,8 @@ tooltips, overflow menus, and dropdown menus.
   make the component more accessible. Disclosures that contain interactive
   elements use popovers as a base container layer to achieve this accessibility
   standard. For further guidance on how to display content within a popover, see
-  the disclosure pattern.
+  the
+  [disclosure pattern](https://carbondesignsystem.com/patterns/disclosures-pattern/).
 - Use when you need to display additional details for specific elements on a
   page. If your popover exceeds four columns in width, use a modal instead.
 
@@ -48,7 +49,7 @@ tooltips, overflow menus, and dropdown menus.
 ## Variants
 
 By default, a popovers structure is made up of a container with no additional
-tip. Depending on the usecase, caret tips or tab tips can be added to the
+tip. Depending on the use case, caret tips or tab tips can be added to the
 container to help show the relationship between the popover and where it was
 triggered from.
 
@@ -122,14 +123,22 @@ interactive it can visually change its shape and size depending on the usecase.
 
 The trigger button can open the popover on click, hover, or focus depending on
 what it is being used for. For more information about trigger buttons, see the
-disclosure pattern.
+[disclosure pattern](https://carbondesignsystem.com/patterns/disclosures-pattern/).
 
 ## Content
 
 ### Main elements
 
 Heading, body, and footer content can vary based on your usecase. To see
-examples of content used in popovers, visit the disclosure pattern.
+examples of content used in popovers, see the
+[disclosure pattern](https://carbondesignsystem.com/patterns/disclosures-pattern/).
+
+### Overflow content
+
+Scrolling is usually not needed when using a popover. If scrolling is needed, in
+a dropdown like situation for instance, then the body section should scroll
+vertically with the header and footer remaining fixed in place if those elements
+are present. Do not scroll horizontally or let content bleed off the page.
 
 ### Further guidance
 
@@ -138,7 +147,7 @@ For further content guidance, see Carbon's
 
 ## No tip
 
-Popovers without a tip can be used for a wide variety of different usecases. No
+Popovers without a tip can be used for a wide variety of different use cases. No
 tip popovers are typically used when the trigger button has a visually defined
 down state.
 
@@ -307,7 +316,7 @@ container because they are connected to eachother.
 #### Mouse
 
 Users trigger a popover to open and close by clicking or hovering on the trigger
-button depending on the usecase.
+button depending on the use case.
 
 Click: Open the popover by clicking on the trigger button. Close the popover by
 clicking on the trigger button again, or anywhere outside of the open popover
@@ -345,8 +354,8 @@ NVDA: Users can trigger a button to open a popover by pressing `Enter` or
 
 #### Colors
 
-Popovers come in three different container colors—`$layer-01`, `$layer-02`, and
-`$background-inverse`.
+Popovers are most commonly used in these three different container
+colors—`$layer-01`, `$layer-02`, and `$background-inverse`.
 
 <Row>
 <Column colLg={8}>
@@ -381,7 +390,7 @@ Form components that have menus, like dropdowns, use popovers as a base layer.
 
 Disclosures use popovers as a base layer. Disclosures are comprised of a popover
 container, text, and interactive elements. For further guidance, see Carbon's
-disclosure pattern.
+[disclosure pattern](https://carbondesignsystem.com/patterns/disclosures-pattern/).
 
 #### Overflow menus
 
@@ -392,13 +401,16 @@ guidance, see Carbon's
 
 #### Toggletips
 
-TBD guidance.
+Toggletips use the popovers as a base layer. Toggletips allow interactive
+elements within the popover container while still being accessible. For further
+guidance, see Carbon's
+[toggletip component](https://carbondesignsystem.com/components/toggletip/usage/)
 
 #### Tooltips
 
 Tooltips use popovers as a base layer. Tooltips are comprised of a trigger
 button, popover container and text. For further guidance, see Carbon's
-[tooltip](https://www.carbondesignsystem.com/components/tooltip/usage/).
+[tooltip component](https://www.carbondesignsystem.com/components/tooltip/usage/).
 
 ## References
 
