--- a/src/pages/components/checkbox/usage.mdx
+++ b/src/pages/components/checkbox/usage.mdx
@@ -194,10 +194,11 @@ For more information about spacing for the checkbox component itself, see the
 
 #### Group labels (optional)
 
-- If necessary, a heading can accompany a set of checkboxes to provide further
+- In most cases, a set of checkboxes is preceded by a group label to provide further
   context or clarity.
 - A group label can either state the category of the grouping or describe what
   actions to take below.
+- If the group label is an instruction, be explicit about the results that will follow if a checkbox is selected.
 - Use sentence case for group labels.
 - In some cases, a group of checkboxes may be within a larger group of
   components that already have a group label. In this case, an additional group
@@ -211,7 +212,6 @@ For more information about spacing for the checkbox component itself, see the
 #### Checkbox labels
 
 - Always use clear and concise labels for checkboxes.
-- Be explicit about the results that will follow if the checkbox is selected.
 - Labels appear to the right of checkbox inputs.
 
 ### Overflow content
@@ -314,7 +314,7 @@ the parent checkbox from the default checked state to the indeterminate state.
 
 Users can trigger an item by clicking the checkbox input directly or by clicking
 the checkbox label. Having both regions interactive creates a more accessible
-click target.
+click target. The only hover effect when the mouse is placed over the target is a pointer shape change.
 
 <Row>
 <Column colLg={8}>
@@ -326,25 +326,8 @@ click target.
 
 #### Keyboard
 
-Users can trigger a state change by pressing `Space` while the checkbox input
-has focus. For additional keyboard interactions, see the
+Users can navigate to and between checkbox inputs by pressing `Tab` or `Shift-Tab`. Users can trigger a state change by pressing `Space` while the checkbox input has focus. For additional keyboard interactions, see the
 [accessibility tab](https://www.carbondesignsystem.com/components/checkbox/accessibility).
-
-Users can navigate between checkbox inputs by pressing `Tab` or `Shift-Tab`.
-
-#### Screen readers
-
-VoiceOver: Users can trigger a state change by pressing `Control-Option-Space`
-or `Space` while the checkbox input has screen reader focus.
-
-JAWS: Users can trigger a state change by pressing `Space` while the checkbox
-input has screen reader focus.
-
-NVDA: Users can trigger a state change by pressing `Space` while the checkbox
-input has screen reader focus.
-
-For additional information, see
-[screen reader tests](https://www.carbondesignsystem.com/components/checkbox/accessibility#ios-screen-reader-tests).
 
 ## Related
 
