--- a/src/pages/components/checkbox/usage.mdx
+++ b/src/pages/components/checkbox/usage.mdx
@@ -203,16 +203,15 @@ For more information about spacing for the checkbox component itself, see the
 - In some cases, a group of checkboxes may be within a larger group of
   components that already have a group label. In this case, an additional group
   label for the checkbox component itself is not needed.
-- Regardless of whether the label is visible in the interface, a group label is
-  always needed in code, whether it's for one checkbox or a group of them. See
-  the
-  [checkbox code tab](https://www.carbondesignsystem.com/components/checkbox/code)
-  for more information.
 
 #### Checkbox labels
 
 - Always use clear and concise labels for checkboxes.
 - Labels appear to the right of checkbox inputs.
+- Regardless of whether the label is visible in the interface, a label is
+  always needed in code, whether it's for one checkbox or a group of them. See
+  the [checkbox code tab](https://www.carbondesignsystem.com/components/checkbox/code)
+  for more information.
 
 ### Overflow content
 
