docs(v11): add carbon-components-react section

--- a/src/pages/migrating/guide/overview.mdx
+++ b/src/pages/migrating/guide/overview.mdx
@@ -9,7 +9,7 @@ tabs: ['Overview', 'Design', 'Develop']
 <PageDescription>
 
 Ready to make the move to Carbon v11? Our Migration Guide helps designers and
-developers learn more about this release and how to start migrating to v11 today
+developers learn more about this release and get started migrating to v11
 
 </PageDescription>
 
@@ -22,15 +22,20 @@ developers learn more about this release and how to start migrating to v11 today
 ## Overview
 
 Carbon v11 focuses on quality of life updates for designers and developers. This
-update includes changes to our token names for ease of use, component API
-updates for a more predictable developer experience, along with new features
-like CSS grid in order to build robust layouts on top of the 2x grid. With no
-changes to the IBM Design Language, v11 will not require any brand-driven
-product redesigns.
+update includes:
 
-To get started migrating, check out our [Getting started](#getting-started)
-section below. To learn about this release, check out our
-[Changelog](#changelog).
+- Changes to how we name our tokens to make them easier to use
+- Improved theming to enable light and dark mode support in product
+- The introduction of CSS Grid to build robust layouts on top of the 2x grid
+- A 90% decrease in compilation for Styles from Carbon
+- Updates to the accessibility of our components
+
+With no changes to the IBM Design Language, v11 will not require any
+brand-driven product redesigns.
+
+To learn more about what's included in this release, check out our
+[Changelog](#changelog). To get started migrating, visit out our
+[Getting started](#getting-started) section below.
 
 ## Getting started
 
@@ -87,6 +92,8 @@ out our
 
 ### React
 
+#### New components
+
 ### Icons
 
 ### IBM Plex
@@ -115,28 +122,3 @@ out our
   - Icons
 - CSS Grid
 - IBM Plex
-
-### What’s changing
-
-- **APIs:** Size prop naming conventions have been updated to be consistent
-  across all components.
-- **Color tokens:** Existing tokens have been renamed to better reflect their
-  usage and new tokens have been added to fill existing color token gaps in our
-  system.
-- **Sass modules:** Carbon styles have been updated to use its own dedicated
-  package and is transitioning to Sass modules.
-- **Theming:** New support for inline theming and light or dark modes.
-- **Design kit:** The Sketch theme libraries have been updated to include all
-  v11 updates. Other design tools may have a rolling update to come.
-- **Components:** A new one-package install along with new components and API
-  updates.
-- **Grid:** New CSS Grid support to make it easier to build layouts.
-- **Component props:** Changes include updates `className`, event handlers and
-  size props.
-- **Component updates:** While working with IBM Accessibility group we have
-  focused on updating the following accessibility primitives: Notification,
-  Tooltip and Content Switcher.
-- **Changes to `@carbon/icons-react`:** We are updating the default size to `md`
-  automatically included in the `@carbon/react` package.
-- **New Components:** We have some exciting new components! Here they are:
-  Popover, Tooltip, Dialog.
