--- a/src/pages/migrating/guide/develop.mdx
+++ b/src/pages/migrating/guide/develop.mdx
@@ -54,28 +54,345 @@ around in v11 but they will only be re-exports of `@carbon/styles` and
 
 ## carbon-components-react
 
-- Uninstall `carbon-components`, `carbon-components-react`, `carbon-icons`, and
-  `@carbon/icons-react`
-- Install `@carbon/react`
-- If you're importing styles...
-- React components
-  - Grid
-  - Notification
-  - Tabs
-  - Tooltip
-  - Prop changes
-    - className
-    - Size prop
-  - Layering with the `light` prop
-- If you're importing icons...
-  - Update imports
-  - Size prop changes
+Starting in v11, the React components for Carbon live in the `@carbon/react`
+package. Alternatively, you can continue to use `carbon-components` as it
+re-exports components from the `@carbon/react` package.
 
-For a full list of changes, checkout our [Migration Docs](#todo).
+The `@carbon/react` package also includes the styles for Carbon along with
+icons.
 
-### Grid
+### Step 1: Install @carbon/react
 
-### Notification
+To get started, uninstall the following packages if they exist in your project:
+
+- `carbon-components`
+- `carbon-components-react`
+- `carbon-icons`
+- `@carbon/icons-react`
+
+```bash
+npm uninstall carbon-components carbon-components-react carbon-icons @carbon/icons-react
+```
+
+Or, with [Yarn](https://yarnpkg.com/):
+
+```bash
+yarn remove carbon-components carbon-components-react carbon-icons @carbon/icons-react
+```
+
+Next, install the `@carbon/react` package:
+
+```bash
+npm install @carbon/react
+```
+
+Or, with [Yarn](https://yarnpkg.com/):
+
+```bash
+yarn add @carbon/react
+```
+
+### Step 2: Styles and Dart Sass
+
+If you're importing styles from `carbon-components`, you can now import styles
+directly from `@carbon/react` or the `@carbon/react/scss` folder.
+
+Before you're able to bring in these styles, you'll need to make sure your
+project is setup to use Dart Sass. Starting in v11, Carbon styles requires Dart
+Sass through the `sass` package in order to compile. This change comes from our
+migration to Sass Modules in order to improve our compilation times and overall
+project structure.
+
+If you don't have this dependency already in your project, you can install it:
+
+```bash
+npm install sass
+```
+
+Or, with [Yarn](https://yarnpkg.com/):
+
+```bash
+yarn add sass
+```
+
+Similarly, if you currently use `node-sass` now is a good time to remove that
+dependency from your project. In most situations, Dart Sass is a drop-in
+replacement for `node-sass` and should require no changes on your end in order
+to use it once you install the dependency.
+
+### Step 3: Setup Dart Sass for your project
+
+One you have Dart Sass installed, it's important that you configure your project
+to support resolving imports in Sass from `node_modules`. Typically, this means
+adding `node_modules` to your `includePaths` config for Sass in your bundler or
+toolchain of choice.
+
+To learn more about how to configure your specific toolchain to support this,
+read the documentation for configuration
+[here](https://github.com/carbon-design-system/carbon/blob/main/packages/styles/docs/sass.md#configuration).
+We also have published a guide over on
+[Medium](https://medium.com/carbondesign/migrating-from-node-sass-to-sass-eba9db004a3a)
+to help out with common problems that come from this migration.
+
+### Step 4: Update style import paths
+
+In v10, you may have been bringing in styles from `carbon-components` by either
+importing the styles directly with:
+
+```scss
+@import 'carbon-components/scss/globals/scss/styles.scss';
+```
+
+Or, you imported the styles through specific entrypoints:
+
+```scss
+// Feature flags
+$feature-flags: (
+  enable-columns-16: true,
+);
+// Options
+$css--default-type: true;
+$css--reset: true;
+// Top-level imports
+@import 'carbon-components/scss/globals/scss/vars';
+@import 'carbon-components/scss/globals/scss/colors';
+@import 'carbon-components/scss/globals/scss/theme';
+@import 'carbon-components/scss/globals/scss/spacing';
+@import 'carbon-components/scss/globals/scss/typography';
+@import 'carbon-components/scss/globals/scss/css--reset';
+@import 'carbon-components/scss/globals/scss/css--body';
+// Component imports
+@import 'carbon-components/scss/components/accordion/accordion';
+@import 'carbon-components/scss/components/button/button';
+```
+
+If you imported the entrypoint from `carbon-components`, you can now do this
+directly from `@carbon/styles` without any additional paths by writing:
+
+```scss
+@use '@carbon/react';
+```
+
+If you were providing any configuration options before you imported Carbon you
+can now provide them using the `with` syntax:
+
+```scss
+@use '@carbon/react' with ($css--default-type: true, $css--reset: true);
+```
+
+If you were using any feature flags in v10, you can safely remove them in v11.
+
+_Note: you can also use `@import` to bring in Carbon, if you prefer, although
+`@use` is recommended._
+
+If you were bringing parts of Carbon, you'll need to update the paths to reflect
+the new paths in `@carbon/styles`. In general, most paths moved from
+`scss/globals/scss/filename` to `scss/filename`.
+
+```scss
+// Configuration
+@use '@carbon/react/scss/config' with
+  ($css--default-type: true, $css--reset: true);
+// Reset
+@use '@carbon/react/scss/reset';
+// Grid
+@use '@carbon/react/scss/grid';
+// Helpers
+@use '@carbon/react/scss/theme';
+@use '@carbon/react/scss/spacing';
+@use '@carbon/react/scss/type';
+// Components
+@use '@carbon/react/scss/components/accordion';
+@use '@carbon/react/scss/components/button';
+```
+
+For a full list of the paths that have changed in `carbon-components`, check out
+our
+[Migration Docs](https://github.com/carbon-design-system/carbon/blob/main/docs/migration/v11.md#changing-import-paths-from-scssglobalsscss-to-scss).
+
+_Note: if you see any references to `@carbon/styles` for style imports, you can
+safely replace the beginning of the path with `@carbon/react` for the same
+import in this package._
+
+### Step 5: Update Sass imports
+
+If you're project is currently importing from different parts of
+`carbon-components` for specific variables, mixins, or functions then you will
+need to make sure that your imports have been updated to the correct path.
+
+The full list of changes are available in our
+[Migration Docs](https://github.com/carbon-design-system/carbon/blob/main/docs/migration/v11.md#changing-import-paths-from-scssglobalsscss-to-scss)
+but, in general, most imports have been updates so that the `carbon--` is no
+longer necessary.
+
+### Step 6: Update JavaScript imports
+
+After updating how you bring in styles, you will need to update your import
+paths from `carbon-components-react` to `@carbon/react` for components that
+you're bringing from Carbon.
+
+```jsx
+// Before
+import { Accordion, AccordionItem } from 'carbon-components-react';
+// After
+import { Accordion, AccordionItem } from '@carbon/react';
+```
+
+### Step 7: Update icon imports
+
+The `@carbon/icons-react` package has been updated to minimize the number of
+exports from the package to help reduce build and compile times. This package is
+available under `@carbon/react/icons`.
+
+This update includes a change to the API of the icon components that come from
+this package. Previously, we would export icons that included the size of the
+asset. This update allows you to bring the icon directly and specify the size
+using the `size` prop.
+
+**Before**
+
+```jsx
+import { Add32, Add24, Add20, Add16 } from '@carbon/icons-react';
+
+function MyComponent() {
+  return (
+    <>
+      <Add32 />
+      <Add24 />
+      <Add20 />
+      <Add16 />
+    </>
+  );
+}
+```
+
+**After**
+
+```jsx
+import { Add } from '@carbon/react/icons';
+
+function MyComponent() {
+  return (
+    <>
+      <Add size={32} />
+      <Add size={24} />
+      <Add size={20} />
+      <Add />
+    </>
+  );
+}
+```
+
+With this change, you can now import icons from `@carbon/react` directly by
+writing:
+
+```jsx
+import { Add } from '@carbon/react/icons';
+```
+
+### Step 8: Update components that have changed
+
+In v11, we have updated the APIs of certain components in one of the following
+ways:
+
+- Update `className` usage to be applied to the outermost element of a component
+- Update `size` to have consistent values across the codebase
+- Remove props that have been deprecated in v10
+- Refactor the API to ship an accessible component
+
+For a full list of changes to components, check out our
+[Migration Docs](https://github.com/carbon-design-system/carbon/blob/main/docs/migration/v11.md#carbon-components-react).
+Below are some common changes that may impact you and your usage of Carbon.
+
+#### Changes to `className`
+
+The usage of `className` prop has been updated so that the class is passed to
+the outermost element of a component's inner markup. This was already the case
+for most components and this change brings along the remaining components in the
+library to this convention.
+
+The following components previously were not applying the `className` prop to
+the outermost element. If you were using a custom `className` to target an inner
+element for any of these components, you will have to update your selectors to
+now account for the `className` being placed on the outermost element.
+
+- Checkbox
+- ComboBox
+- Table
+- TableToolbar
+- DataTableSkeleton
+- DatePicker
+- DatePickerSkeleton
+- DatePickerInput
+- Dropdown
+- FileUploaderDropContainer
+- FileUploaderItem
+- FormGroup
+- FilterableMultiSelect
+- MultiSelect
+- NotificationTextDetails
+- NotificationIcon
+- NumberInput
+- OverflowMenuItem
+- RadioButtonGroup
+- RadioTile
+- Select
+- Slider
+- Switch
+- TextArea
+- ControlledPasswordInput
+- PasswordInput
+- TextInput
+- TimePicker
+- Tooltip
+- HeaderContainer
+
+#### Changes to `size`
+
+Components with size variants have been updated to use the same API options.
+Previously, the size options were inconsistent: `field`, `medium`, `short`. Now,
+size options fall under the following values:
+
+| Prop value | Size |
+| ---------- | ---- |
+| `xs`       | 24px |
+| `sm`       | 32px |
+| `md`       | 40px |
+| `lg`       | 48px |
+| `xl`       | 64px |
+| `2xl`      | 80px |
+
+_Note: the default size in v11 is `md` (`40px`)._
+
+The following components all have size variants that may be affected in your
+code. To update, you will need to switch to one of the size options above.
+
+- Accordion
+- Button
+- ComboBox
+- Dropdown
+- Multiselect
+- Filterable multiselect
+- ContentSwitcher
+- DataTable
+- DatePicker
+- FileUploader
+- FileUploaderItem
+- FileUploaderDropContainer
+- FileUploaderButton
+- Link
+- Modal
+- ComposedModal
+- NumberInput
+- OverflowMenu
+- Search
+- Select
+- Tag
+- TextInput
+- TimePicker
+- Toggle
+
+#### Notification
 
 We have updated the notification components to be more accessible out of the
 box. `ToastNotification` and `InlineNotification` now have `role="status"` by
@@ -91,14 +408,7 @@ All notifications have a new optional `closeOnEscape` prop, it enables
 notifications to closed by pressing the `escape` key. For more details, see the
 [notification components accessibility page](https://v11.carbondesignsystem.com/components/notification/accessibility).
 
-#### What this means for you and your team
-
-- Notifications will be WAI-ARIA compliant out of the box without the explicit
-  need for additional functionality or configuration
-
-#### How to migrate
-
-##### Update `ToastNotification` usage
+#### Update `ToastNotification` usage
 
 - The `title`, `subtitle` and `caption` props have been removed. Compose
   notification contents using `children` instead.
@@ -110,7 +420,7 @@ notifications to closed by pressing the `escape` key. For more details, see the
 - The `closeOnEscape` prop toggles the closing of notifications via the `escape`
   key.
 
-##### Update `InlineNotification` usage
+#### Update `InlineNotification` usage
 
 - The `title`, `subtitle` props have been removed. Compose notification contents
   using `children` instead.
@@ -123,7 +433,7 @@ notifications to closed by pressing the `escape` key. For more details, see the
 - The `closeOnEscape` prop toggles the closing of notifications via the `escape`
   key.
 
-##### When using `ActionableNotification`:
+#### When using `ActionableNotification`:
 
 - The `inline` prop enables a styling variation resulting in a similar visual
   design to `InlineNotification`.
@@ -132,30 +442,92 @@ notifications to closed by pressing the `escape` key. For more details, see the
 - The `closeOnEscape` prop toggles the closing of notifications via the `escape`
   key.
 
-#### Resources
+#### Tabs
 
-<Row className="resource-card-group">
-  <Column colLg={4} colMd={4} noGutterSm>
-    <ResourceCard
-      subTitle="Notification usage examples"
-      href="https://carbon-react-next.netlify.app/?path=/story/components-notifications--toast"
-    >
-      <MdxIcon name="storybook" />
-    </ResourceCard>
-  </Column>
-  <Column colLg={4} colMd={4} noGutterSm>
-    <ResourceCard
-      subTitle="Notification accessibility page"
-      href="https://v11.carbondesignsystem.com/components/notification/accessibility"
-    >
-      <MdxIcon name="bee" />
-    </ResourceCard>
-  </Column>
-</Row>
+Tabs have been updated to be more composable so that you have the flexibity and
+control to make them look and act how you want.
 
-### Tabs
+In v10, you may have code that looks like the following:
 
-### Tooltip
+```js
+<Tabs>
+  <Tab label="Tab label 1">
+    <p>Content for first tab goes here.</p>
+  </Tab>
+  <Tab label="Tab label 2">
+    <p>Content for second tab goes here.</p>
+  </Tab>
+  <Tab label="Tab label 3" disabled>
+    <p>Content for third tab goes here.</p>
+  </Tab>
+  <Tab
+    label="Tab label 4 shows truncation"
+    title="Tab label 4 shows truncation"
+  >
+    <p>Content for fourth tab goes here.</p>
+  </Tab>
+</Tabs>
+```
+
+Those same Tabs, migrated to v11:
+
+```js
+<Tabs>
+  <TabList>
+    <Tab>Tab Label 1</Tab>
+    <Tab>Tab Label 2</Tab>
+    <Tab disabled>Tab Label 3</Tab>
+    <Tab title="Tab Label 4 shows truncation">Tab Label 4 shows truncation</Tab>
+  </TabList>
+  <TabPanels>
+    <TabPanel>Content for first tab goes here.</TabPanel>
+    <TabPanel>Content for second tab goes here.</TabPanel>
+    <TabPanel>Content for third tab goes here.</TabPanel>
+    <TabPanel>Content for fourth tab goes here.</TabPanel>
+  </TabPanels>
+</Tabs>
+```
+
+#### Update `Tabs` and `Tab` usage
+
+All the same functionality for Tabs is available in v11 and more! However, some
+props have been deprecated becuase they have either been renamed or are no
+longer needed. Below are the minor tweaks in naming or implementation.
+
+- the `type` prop is deprecated. Both "container" and "default" tabs still exist
+  but now can be called by adding the prop `contained` to the `TabList`.
+- Default tabs are now referred to as line tabs in our documentation here and in
+  our storybook.
+- `hidden` prop is no longer needed with the new composable Tabs. You have
+  control over tab content and when it is hidden through the `TabPanel` and
+  `TabPanels` components.
+- `selected` prop is now named `selectedIndex`.
+- `tabContentClassName` is no longer needed. `TabPanel` (equivalent to tab
+  content) takes in a className prop on its outermost node.
+- For `Tab`, `label` is no longer needed. `children` of `Tab` are now the label.
+- Due to its composability, `renderAnchor`, `renderButton`, `renderContent` are
+  no longer needed on `Tab`. You now have full control over what is rendered
+  inside of `Tab` and `TabPanel`.
+- Because `renderButton` is no longer needed, the associated `tabIndex` prop has
+  also been deprecated.
+- `selected` on `Tab` is deprecated in favor or `selectedIndex`, now placed on
+  `Tabs` instead.
+
+For more details about the changes to Tabs, see our storybook documentation
+[here](https://react.carbondesignsystem.com/?path=/docs/components-tabs--default).
+
+#### Tooltip
+
+### Step 9: Done with @carbon/react!
+
+And that's it! You're done. At this point you have migrated to use Carbon v11
+using the `@carbon/react` package.
+
+If you run into any problems after this point, pleasefeel free to reach out to
+us over on Slack or open up a discussion on
+[GitHub](https://github.com/carbon-design-system/carbon/discussions/categories/help).
+We want to make this migration experience as seamless as possible and will be
+monitoring both areas to help out.
 
 ## carbon-components
 
@@ -167,7 +539,7 @@ _Note: if you are using `carbon-components-react`, you can bring in styles
 directly from the new package `@carbon/react`. To learn more, visit the
 [`carbon-components-react`](#carbon-components-react) section_
 
-### Step 1
+### Step 1: Install @carbon/styles
 
 To get started, uninstall `carbon-components` from your project:
 
@@ -193,13 +565,13 @@ Or, with [Yarn](https://yarnpkg.com/):
 yarn add @carbon/styles
 ```
 
-### Step 2
+### Step 2: Install Dart Sass
 
 Previously, `carbon-components` supported being compiled by different Sass
 libraries. Starting in v11, the `@carbon/styles` package requires Dart Sass
-through the `sass` package in order to compile. This change comes due to our
-migration over to Sass Modules in order to improve our compilation times and
-overall project structure.
+through the `sass` package in order to compile. This change comes from our
+migration to Sass Modules in order to improve our compilation times and overall
+project structure.
 
 If you don't have this dependency already in your project, you can install it:
 
@@ -218,7 +590,7 @@ dependency from your project. In most situations, Dart Sass is a drop-in
 replacement for `node-sass` and should require no changes on your end in order
 to use it once you install the dependency.
 
-### Step 3
+### Step 3: Setup Dart Sass
 
 One you have Dart Sass installed, it's important that you configure your project
 to support resolving imports in Sass from `node_modules`. Typically, this means
@@ -228,8 +600,11 @@ toolchain of choice.
 To learn more about how to configure your specific toolchain to support this,
 read the documentation for configuration
 [here](https://github.com/carbon-design-system/carbon/blob/main/packages/styles/docs/sass.md#configuration).
+We also have published a guide over on
+[Medium](https://medium.com/carbondesign/migrating-from-node-sass-to-sass-eba9db004a3a)
+to help out with common problems that come from this migration.
 
-### Step 4
+### Step 4: Update import paths
 
 In v10, you may have been bringing in styles from `carbon-components` by either
 importing the styles directly with:
@@ -285,7 +660,7 @@ the new paths in `@carbon/styles`. In general, most paths moved from
 `scss/globals/scss/filename` to `scss/filename`.
 
 ```scss
-// Configuratoin
+// Configuration
 @use '@carbon/styles/scss/config' with
   ($css--default-type: true, $css--reset: true);
 // Reset
@@ -305,7 +680,7 @@ For a full list of the paths that have changed in `carbon-components`, check out
 our
 [Migration Docs](https://github.com/carbon-design-system/carbon/blob/main/docs/migration/v11.md#changing-import-paths-from-scssglobalsscss-to-scss).
 
-### Step 5
+### Step 5: Update imports
 
 If you were using specific variables, mixins, or functions from Carbon, it may
 be that you will need to update their name in v11. In general, all `carbon--`
@@ -316,7 +691,11 @@ changed, check out our
 [Migration Docs](https://github.com/carbon-design-system/carbon/blob/main/docs/migration/v11.md#changing-import-paths-from-scssglobalsscss-to-scss)
 and find the specific file that you were importing from.
 
-### Step 6
+For a full list of the paths that have changed in `carbon-components`, check out
+our
+[Migration Docs](https://github.com/carbon-design-system/carbon/blob/main/docs/migration/v11.md#changing-import-paths-from-scssglobalsscss-to-scss).
+
+### Step 6: Update bx to cds
 
 If you are targeting specific selectors that use the `bx` prefix, you will need
 to update your code to either target the `cds` prefix for selectors or update
@@ -329,7 +708,7 @@ Carbon's configuration to use `bx` as the prefix by writing the following:
 @use '@carbon/styles/scss/config' with ($prefix: 'bx');
 ```
 
-### Step 7
+### Step 7: Enable flexbox grid
 
 If you are using the flexbox-based grid in your project, you can continue to use
 this feature in v11 by importing the following:
@@ -342,7 +721,7 @@ This is important due to the fact that the CSS Grid implementation is used by
 default in v11. However, bringing in the flexbox grid styles in this way means
 that your layouts will continue to work the same as in v10.
 
-### Step 8
+### Step 8: Update color tokens
 
 If you are using color tokens from Carbon, you can either update to use the new
 tokens in v11 or use the compatability theme for incremental adoption of the new
@@ -365,7 +744,7 @@ Doing this will allow you to use tokens from the g100 theme in v10 along with
 the tokens in v11. This will work for any of the themes in v10 including white,
 g10, g90, and g100.
 
-### Step 9
+### Step 9: Done with @carbon/styles!
 
 And that's it! You're done. At this point you have migrated to use Carbon v11
 using the `@carbon/styles` package.
