--- a/src/pages/migrating/guide/develop.mdx
+++ b/src/pages/migrating/guide/develop.mdx
@@ -123,7 +123,7 @@ to use it once you install the dependency.
 
 ### Step 3: Setup Dart Sass for your project
 
-One you have Dart Sass installed, it's important that you configure your project
+Once you have Dart Sass installed, it's important that you configure your project
 to support resolving imports in Sass from `node_modules`. Typically, this means
 adding `node_modules` to your `includePaths` config for Sass in your bundler or
 toolchain of choice.
